# SPOOLES

./: CMakeLists.txt  COPYING  Make.inc  README
include/: A2.h  BKL.h  BPG.h  Chv.h  ChvList.h  ChvManager.h  Coords.h  DDsepInfo.h  DSTree.h  DV.h  DenseMtx.h  Drand.h  EGraph.h  ETree.h  FrontMtx.h  GPart.h  Graph.h  I2Ohash.h  IIheap.h  ILUMtx.h  IV.h  IVL.h  Ideq.h  InpMtx.h  Iter.h  Lock.h  MPI.h  MSMD.h  MT.h  Network.h  PatchAndGoInfo.h  Pencil.h  Perm.h  SolveMap.h  SubMtx.h  SubMtxList.h  SubMtxManager.h  SymbFac.h  Tree.h  Utilities.h  (+6 more)
include/Utilities/: MM.h
src/: CMakeLists.txt
src/A2/: IO.c  QRreduce.c  basics.c  copyEntriesToVector.c  init.c  instance.c  makeStaircase.c  norms.c  sort.c  util.c
src/A2/tests/: CMakeLists.txt  testQR.c  test_norms.c
src/BKL/: basics.c  evalfcn.c  exhSearch.c  fidmat.c  init.c  util.c
src/BPG/: DM.c  IO.c  basics.c  init.c  makeGraphs.c  maxFlow.c  pseudo.c
src/Chv/: IO.c  assemble.c  basics.c  copy.c  factor.c  findPivot.c  init.c  instance.c  search.c  swap.c  update.c  util.c
src/ChvList/: IO.c  basics.c  init.c  util.c
src/ChvManager/: IO.c  basics.c  init.c  util.c
src/Coords/: IO.c  basics.c  init.c  util.c
src/DSTree/: IO.c  basics.c  init.c  instance.c  stages.c  util.c
src/DV/: IO.c  basics.c  init.c  instance.c  profile.c  util.c
src/DenseMtx/: IO.c  basics.c  init.c  initAsSubmtx.c  instance.c  permute.c  scale.c  util.c
src/Drand/: basics.c  init.c  util.c
src/EGraph/: IO.c  basics.c  init.c  misc.c  mkAdjGraph.c
src/ETree/: IO.c  basics.c  compress.c  init.c  initFromSubtree.c  instance.c  justify.c  maps.c  metrics.c  ms.c  permute.c  semi.c  storage.c  transform.c  util.c
src/FrontMtx/: IO.c  QRfactor.c  QRsolve.c  QRutil.c  basics.c  factor.c  factorUtil.c  init.c  instance.c  loadEntries.c  permute.c  postProcess.c  postponed.c  solve.c  solveUtil.c  split.c  storeFront.c  update.c  util.c
src/GPart/: DDsepInfo.c  DDviaFishnet.c  DDviaProjection.c  RBviaDDsep.c  TwoSetViaBKL.c  basics.c  domSegMap.c  identifyWideSep.c  init.c  makeYCmap.c  smoothBisector.c  smoothBy2layers.c  smoothYSep.c  split.c  util.c
src/Graph/: IO.c  basics.c  compress.c  equivMap.c  expand.c  fillFromOffsets.c  init.c  setListsFromOffsets.c  util.c  wirebasket.c
src/I2Ohash/: IO.c  basics.c  init.c  util.c
src/IIheap/: basics.c
src/ILUMtx/: IO.c  basics.c  factor.c  init.c  misc.c  solve.c
src/IV/: IO.c  basics.c  init.c  instance.c  util.c
src/IVL/: IO.c  basics.c  init.c  instance.c  listmanip.c  misc.c  subIVL.c  util.c
src/Ideq/: IO.c  basics.c  resize.c  util.c
src/InpMtx/: IO.c  adjForATA.c  basics.c  extract.c  fullAdj.c  gmmm.c  gmvm.c  init.c  input.c  instance.c  map.c  mvm.c  mvmVector.c  permute.c  profile.c  support.c  util.c
src/Iter/: DenseMtx_mmm.c  bgmresl.c  bgmresr.c  bicgstabl.c  bicgstabr.c  mlbicgstabl.c  mlbicgstabr.c  pcgl.c  pcgr.c  tfqmrl.c  tfqmrr.c  util.c  zbicgstabl.c  zbicgstabr.c  zmlbicgstabl.c  zmlbicgstabr.c  zpcgl.c  zpcgr.c  ztfqmrl.c  ztfqmrr.c
src/Lock/: basics.c  init.c  util.c
src/MPI/: DenseMtx_gather.c  DenseMtx_scatterAdd.c  ETree_Bcast.c  Graph_Bcast.c  IVL_Bcast.c  IVL_alltoall.c  IVLallgather.c  IV_Bcast.c  IVallgather.c  MMM.c  aggListMPI.c  colmapMPI.c  factorMPI.c  fullAdjMPI.c  makeSendRecvIVLs.c  postProcess.c  rowmapMPI.c  solveMPI.c  splitDenseMtx.c  splitFrontMtx.c  splitInpMtx.c  splitPencil.c  symbfacMPI.c  utilities.c
src/MSMD/: MSMDinfo.c  MSMDvtx.c  basics.c  cleanReachSet.c  eliminate.c  fillPerms.c  findInodes.c  frontETree.c  init.c  makeSchurComplement.c  order.c  update.c
src/MT/: QRfactorMT.c  QRsolveMT.c  factorMT.c  mvm.c  solveMT.c
src/Network/: IO.c  addArc.c  augmentPath.c  basics.c  findAugmentingPath.c  findMaxFlow.c  findMincut.c  init.c
src/PatchAndGoInfo/: basics.c  init.c
src/Pencil/: IO.c  basics.c  init.c  mmm.c  permute.c  setup.c  util.c
src/Perm/: IO.c  basics.c  compress.c  init.c  util.c
src/SemiImplMtx/: IO.c  SemiImplMtx.h  basics.c  init.c  solve.c  util.c
src/SolveMap/: IO.c  basics.c  init.c  instance.c  maps.c  setup.c  util.c
src/SubMtx/: IO.c  basics.c  init.c  initRandom.c  instance.c  scalevec.c  solve.c  solveH.c  solveT.c  solveupd.c  solveupdH.c  solveupdT.c  sort.c  util.c
src/SubMtxList/: IO.c  basics.c  init.c  util.c
src/SubMtxManager/: IO.c  basics.c  init.c  util.c
src/SymbFac/: symbfac.c
src/Tree/: IO.c  basics.c  compress.c  draw.c  getCoords.c  init.c  instance.c  justify.c  maximizeGain.c  metrics.c  perms.c  permute.c  subtree.c  util.c
src/Utilities/: CV.c  DV.c  FV.c  I2OP.c  IP.c  IV.c  PCV.c  PDV.c  PFV.c  PIV.c  ZV.c  axpy.c  iohb.c  newsort.c  sortAndCompress.c
src/ZV/: IO.c  basics.c  init.c  instance.c  profile.c  util.c
src/misc/: ND.c  ND2.c  drawGraphEPS.c  fpgrids.c  localND.c  mkNDlinsys.c  mkNDlinsysQR.c  orderViaBestOfNDandMS.c  orderViaMMD.c  orderViaMS.c  orderViaND.c
